# developer-productivity

./: README.md  pyproject.toml
github_stats/ddl/github_stats/: commit.ddl  commit_stats.ddl  git_files.ddl  member.ddl  member_history.ddl  organization.ddl  pull_request.ddl  pull_request_commit.ddl  pull_request_review.ddl  pull_request_review_comment.ddl  repository.ddl  repository_history.ddl  workflow.ddl  (+2 more)
github_stats/get_workflow_runs/: app.py  mwaa-requirements.txt  requirements.txt  utils.py
github_stats/github_stats_collector/: Dockerfile  app.py  records.py  requirements.txt  start.py
github_stats/github_stats_collector_mwaa/: mwaa-requirements.txt
github_stats/queries/: get_all_commits_for_a_day.sql  get_all_members_of_org.sql  get_all_members_with_null_email.sql  get_all_reviews_for_a_day.sql
sceptre/config/: airflow.yaml  config.yaml  db-productivity.yaml  ecr-productivity.yaml  event-rule-productivity-lambda.yaml  iam-policy-for-lambda-productivity.yaml  iam-role-for-lambda-productivity.yaml  lambda-permission-for-event-rule.yaml  lambda-permission-for-sqs.yaml  lambda-productivity.yaml  lambda-trigger-for-sqs.yaml  mwaa-custom-role-policy-extra.yaml  mwaa-custom-role-policy.yaml  mwaa-custom-role.yaml  mwaa.yaml  s3-bucket-dprd-analytics.yaml  s3-bucket-for-athena-staging.yaml  sqs-backfill-queue.yaml
sceptre/templates/: airflow-base.yaml  event-rule-base.yaml  glue-db-base.yaml  iam-user-base.yaml  kinesis-base.yaml  lambda-base.yaml  lambda-trigger-base.yaml  s3-base.yaml  sqs-base.yaml
sceptre/vars/: dev-private.yaml  prod.yaml
(+14 files in other folders)
